2004-09-27  Jim Blandy  <jimb@redhat.com>

	Merge from trunk:
	
	2004-07-23  Martin Hunt  <hunt@redhat.com>
	            Kevin Buettner <kevinb@redhat.com>

	* dwarf2-frame.c (execute_cfa_program): Fix typo in which the
	alignment was being added to the offset instead of multiplied.

2004-09-22  Jim Blandy  <jimb@redhat.com>

	* dwarf2loc.c (dwarf2_evaluate_loc_desc): Fix misapplied patch.

2004-09-07  Jim Blandy  <jimb@redhat.com>

	* rs6000-tdep.c: #include "dwarf2expr.h".
	(dwarf_piece_is_ev_upper_reg, dwarf_piece_is_gpr)
	(e500_dwarf_simplify_register_pieces): New functions.
	(rs6000_gdbarch_init): If the architecture is E500, register
	e500_dwarf_simplify_register_pieces.
	* Makefile.in (rs6000-tdep.o): Update dependencies.

	* gdbarch.sh (dwarf_simplify_register_pieces): New method.
	Add forward declaration for 'struct dwarf_expr_piece'.
	* gdbarch.c, gdbarch.h: Regenerated.
	* dwarf2loc.c (dwarf2_evaluate_loc_desc): Try to simplify
	multi-piece expression results before giving up.
	* arch-utils.c (dwarf_never_simplify_pieces): New function.
	* arch-utils.h (struct dwarf_expr_piece): Forward decl for struct
	type, used in ...
	(dwarf_never_simplify_pieces): New declaration.

	* rs6000-tdep.c: #include "dwarf2-frame.h".
	(rs6000_dwarf2_reg_to_regnum): Recognize 65 as another number for lr.
	(rs6000_gdbarch_init): Hook in dwarf2_frame_sniffer.
	* Makefile.in (rs6000-tdep.o): Update dependencies.

	Merge changes from trunk:

	2004-08-24  Jim Blandy  <jimb@redhat.com>

	* dwarf2expr.h (struct dwarf_expr_context): New members
	'num_pieces' and 'pieces', for returning the result of an
	expression that uses DW_OP_piece.
	(struct dwarf_expr_piece): New struct type.
	* dwarf2expr.c (new_dwarf_expr_context): Initialize num_pieces and
	pieces.
	(free_dwarf_expr_context): Free pieces, if any.
	(add_piece): New function.
	(execute_stack_op): Implement DW_OP_piece.
	* dwarf2loc.c (dwarf2_evaluate_loc_desc): If the result of the